--- a/harjoitustyo/pom.xml
+++ b/harjoitustyo/pom.xml
@@ -13,6 +13,18 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 
+
+	<repositories>
+		<repository>
+			<id>xuggler</id>
+			<url>https://www.dcm4che.org/maven2/</url>
+		</repository>
+		<repository>
+			<id>maven</id>
+			<url>https://repo1.maven.org/maven2</url>
+		</repository>
+	</repositories>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -66,6 +78,24 @@
 			<groupId>org.joml</groupId>
 			<artifactId>joml</artifactId>
 			<version>1.9.19</version>
+		</dependency>
+
+		<!--- Xuggler dependencies -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.5.11</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.5.11</version>
+		</dependency>
+
+		<dependency>
+			<groupId>xuggle</groupId>
+			<artifactId>xuggle-xuggler</artifactId>
+			<version>5.4</version>
 		</dependency>
 	</dependencies>
 
