--- a/harjoitustyo/pom.xml
+++ b/harjoitustyo/pom.xml
@@ -79,6 +79,15 @@
 			<artifactId>joml</artifactId>
 			<version>1.9.19</version>
 		</dependency>
+		<dependency>
+			<groupId>org.lwjgl</groupId>
+			<artifactId>lwjgl-openal</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.lwjgl</groupId>
+			<artifactId>lwjgl-openal</artifactId>
+			<classifier>natives-linux</classifier>
+		</dependency>
 
 		<!--- Xuggler dependencies -->
 		<dependency>
