--- a/harjoitustyo/pom.xml
+++ b/harjoitustyo/pom.xml
@@ -41,6 +41,11 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<testResources>
+			<testResource>
+				<directory>${basedir}/src/test/resources</directory>
+			</testResource>
+		</testResources>
 	</build>
 
 	<dependencyManagement>
