--- a/harjoitustyo/pom.xml
+++ b/harjoitustyo/pom.xml
@@ -23,6 +23,10 @@
 			<id>maven</id>
 			<url>https://repo1.maven.org/maven2</url>
 		</repository>
+		<repository>
+			<id>local-repo</id>
+			<url>file://${basedir}/libs</url>
+		</repository>
 	</repositories>
 
 	<build>
@@ -35,6 +39,9 @@
 					<excludes>
 						<exclude>otm/harjoitustyo/graphics/*</exclude>
 						<exclude>otm/harjoitustyo/audio/*</exclude>
+						<exclude>otm/harjoitustyo/Main*</exclude>
+						<exclude>otm/harjoitustyo/Game*</exclude>
+						<exclude>otm/harjoitustyo/level/LevelManager*</exclude>
 					</excludes>
 				</configuration>
 				<executions>
@@ -75,7 +82,19 @@
 						</goals>
 					</execution>
 				</executions>
-
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<configLocation>checkstyle.xml</configLocation>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>2.5</version>
 			</plugin>
 		</plugins>
 		<testResources>
@@ -183,6 +202,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://github.com/mlomb/freetype-jni -->
+		<dependency>
+			<groupId>freetype-jni</groupId>
+			<artifactId>freetype-jni</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 
 </project>
