--- a/harjoitustyo/pom.xml
+++ b/harjoitustyo/pom.xml
@@ -208,6 +208,14 @@
 			<artifactId>freetype-jni</artifactId>
 			<version>1.2</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.28.0</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
